--- a/SpringBoot_Note/注解汇总.md
+++ b/SpringBoot_Note/注解汇总.md
@@ -14,7 +14,7 @@
 
 > ### Bean
 >
->  **@Component**：
+> **@Component**：
 >
 > - 通用版本，用来标记一个类为 Spring 的组件，Spring 容器会根据类路径扫描找到这些类，并自动实例化为 Bean。
 >
@@ -27,15 +27,14 @@
 > **常用属性**
 >
 > - **value**：
+> - 用于指定 Bean 的名称。如果未提供，默认情况下 Bean 的名称为类名的首字母小写形式
 >
->   - 用于指定 Bean 的名称。如果未提供，默认情况下 Bean 的名称为类名的首字母小写形式
->
->     ```java
->     @Component("myBean")
->     public class MyComponent {
->         // Bean 代码
->     }
->     ```
+>  ```java
+>  @Component("myBean")
+>  public class MyComponent {
+>      // Bean 代码
+>  }
+>  ```
 >
 > **@Autowired**  
 >
@@ -45,6 +44,8 @@
 >   - 当一个接口有多个实现时，Spring 容器在注入依赖时可能会遇到不确定性
 >   -  `@Primary` 
 >   - @Qualifier
+>
+> @Value
 
 
 
@@ -134,52 +135,66 @@
 >
 > - **@Select：**用于执行查询操作，并将结果映射到方法返回类型。
 >
->   - ```java
->       s@Select("SELECT * FROM users WHERE id = #{id}")
->       User selectUserById(int id);
->       ```
->- **@Insert**
-> 
+> - ```
+> s@Select("SELECT * FROM users WHERE id = #{id}")
+>    User selectUserById(int id);
+>   ```
+>   
+>   
+>   
+> - **@Insert**
+>
 >  - ```java
->   @Insert("INSERT INTO users(name, email) VALUES(#{name}, #{email})")
->        void insertUser(User user);
->      ```
->    
->- **@Update：**用于执行更新操作。
+> @Insert("INSERT INTO users(name, email) VALUES(#{name}, #{email})")
+>     void insertUser(User user);
+>    ```
+>
 > 
->  - ```java
->    @Update("UPDATE users SET email = #{email} WHERE id = #{id}")
->       void updateUser(User user);
->       ```
+>
+> - **@Update**
+>
+>   ```
+>   @Update("UPDATE users SET name = #{name} WHERE id = #{id}")
+>   void update(User user);
+>   
+>   ```
+>
+>   
+>
 >    - **@Delete**
 >
 >   - ```java
->    @Delete("DELETE FROM users WHERE id = #{id}")
->     void deleteUser(int id);
->        
->        ```
->    
->- **@Param**
-> 
+>   @Delete("DELETE FROM users WHERE id = #{id}")
+>    void deleteUser(int id);
+>   
+>   ```
+>
+>   
+>
+> - **@Param**
+>
 >  - ```java
->    @Select("SELECT * FROM users WHERE name = #{name}")
->       User selectUserByName(@Param("name") String name);
->       ```
->    - **@Results** 和 **@Result**
+>   @Select("SELECT * FROM users WHERE name = #{name}")
+>   User selectUserByName(@Param("name") String name);
+>   ```
+>
+>   
+>
+> - **@Results** 和 **@Result**
 >
 >   - ```java
->    @Select("SELECT * FROM users WHERE id = #{id}")
->     @Results({
->            @Result(property = "id", column = "id"),
->            @Result(property = "name", column = "name"),
->            @Result(property = "email", column = "email")
->        })
->        User selectUserById(int id);
->        ```
->    
->      - 
+>   @Select("SELECT * FROM users WHERE id = #{id}")
+>    @Results({
+>       @Result(property = "id", column = "id"),
+>       @Result(property = "name", column = "name"),
+>       @Result(property = "email", column = "email")
+>   })
+>   User selectUserById(int id);
+>   ```
 >
-> - 使用规范**
+>   
+>
+> - **使用规范**
 >
 >   - 使用注解的方式可以提高代码的可读性，但 **复杂的 SQL 查询** 可能更适合使用 XML 映射文件。
 
