--- a/SpringBoot_Note/注解汇总.md
+++ b/SpringBoot_Note/注解汇总.md
@@ -135,7 +135,7 @@
 >
 > - **@Select：**用于执行查询操作，并将结果映射到方法返回类型。
 >
-> - ```
+> - ```java
 > s@Select("SELECT * FROM users WHERE id = #{id}")
 >    User selectUserById(int id);
 >   ```
@@ -153,7 +153,7 @@
 >
 > - **@Update**
 >
->   ```
+>   ```java
 >   @Update("UPDATE users SET name = #{name} WHERE id = #{id}")
 >   void update(User user);
 >   
