--- a/SpringBoot_Note/注解汇总.md
+++ b/SpringBoot_Note/注解汇总.md
@@ -135,82 +135,50 @@
 >
 > - **@Select：**用于执行查询操作，并将结果映射到方法返回类型。
 >
-> - ```java
-> s@Select("SELECT * FROM users WHERE id = #{id}")
->    User selectUserById(int id);
->   ```
->   
->   
->   
-> - **@Insert**
->
->  - ```java
-> @Insert("INSERT INTO users(name, email) VALUES(#{name}, #{email})")
->     void insertUser(User user);
->    ```
->
-> 
->
-> - **@Update**
->
->   ```java
->   @Update("UPDATE users SET name = #{name} WHERE id = #{id}")
->   void update(User user);
->   
->   ```
->
->   
->
->    - **@Delete**
->
->   - ```java
->   @Delete("DELETE FROM users WHERE id = #{id}")
->    void deleteUser(int id);
->   
->   ```
->
->   
->
-> - **@Param**
->
->  - ```java
->   @Select("SELECT * FROM users WHERE name = #{name}")
->   User selectUserByName(@Param("name") String name);
->   ```
->
->   
->
-> - **@Results** 和 **@Result**
->
->   - ```java
->   @Select("SELECT * FROM users WHERE id = #{id}")
->    @Results({
->       @Result(property = "id", column = "id"),
->       @Result(property = "name", column = "name"),
->       @Result(property = "email", column = "email")
->   })
+>   - @Select("SELECT * FROM users WHERE id = #{id}")
 >   User selectUserById(int id);
->   ```
->
+>      - 
 >   
+>   - **@Insert**
+>   
+>     - @Insert("INSERT INTO users(name, email) VALUES(#{name}, #{email})")
+>    void insertUser(User user);
+>  - 
+> 
+> - **@Update**
+>    
+>      - @Update("UPDATE users SET name = #{name} WHERE id = #{id}")
+>  void update(User user);
+>   - 
 >
-> - **使用规范**
+> - **@Delete**
 >
->   - 使用注解的方式可以提高代码的可读性，但 **复杂的 SQL 查询** 可能更适合使用 XML 映射文件。
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+>     - @Delete("DELETE FROM users WHERE id = #{id}")
+>     void deleteUser(int id);
+>     - 
+>   
+>   - @Param**
+>
+>     - @Select("SELECT * FROM users WHERE name = #{name}")
+>  User selectUserByName(@Param("name") String name);
+>   - 
+>
+> - **@Results 和 @Result**
+>   
+>      - @Select("SELECT * FROM users WHERE id = #{id}")
+>       @Results({
+>        @Result(property = "id", column = "id"),
+>     @Result(property = "name", column = "name"),
+>        @Result(property = "email", column = "email")
+>    })
+>     User selectUserById(int id);
+>  - 
+> 
+>   - **使用规范**
+>   
+>     - 使用注解的方式可以提高代码的可读性，但 **复杂的 SQL 查询** 可能更适合使用 XML 映射文件。
+>
+>     
 
 
 
