--- a/SpringBoot_Note/注解汇总.md
+++ b/SpringBoot_Note/注解汇总.md
@@ -157,10 +157,10 @@
 >     void deleteUser(int id);
 >     - 
 >   
->   - @Param**
+> - **@Param**
 >
->     - @Select("SELECT * FROM users WHERE name = #{name}")
->  User selectUserByName(@Param("name") String name);
+>   - @Select("SELECT * FROM users WHERE name = #{name}")
+>    User selectUserByName(@Param("name") String name);
 >   - 
 >
 > - **@Results 和 @Result**
