--- a/SpringBoot_Note/+安全_请求拦截_拦截器.md
+++ b/SpringBoot_Note/+安全_请求拦截_拦截器.md
@@ -1,7 +1,11 @@
 ## 概述
 
 > - 拦截器是 **Spring** 框架提供的核心功能之一，允许开发人员提前预定义一些逻辑，在用户的请求、响应前后执行。也可以在用户请求前阻止其执行或者在请求完成之后做一些资源释放。
-> - 拦截器可以调用 IOC 容器中的各种依赖，而过滤器不能 
+> - 
+
+
+
+## 视图参考过滤器
 
 
 
@@ -12,7 +16,7 @@
 > - 实现HandlerInterceptor接口
 > - 重写perHandle方法
 >   - true放行
-> - 在类上加上@component,交由类管理
+> - 在类上加上@component，交由类管理
 
 
 
@@ -59,8 +63,8 @@ public class MyInterceptor implements HandlerInterceptor {
 public class WebConfig implements WebMvcConfigurer {
 
     //注入入门拦截器
-//    @Autowired
-//    MyInterceptor myInterceptor;
+	//@Autowired
+	//MyInterceptor myInterceptor;
 
     //注入登录拦截器
     @Autowired
@@ -92,3 +96,18 @@ public class WebConfig implements WebMvcConfigurer {
 
 ![1726274221084](安全_请求拦截_拦截器.assets/1726274221084.png)
 
+
+
+### 可配置路径
+
+![1726366369069](安全_请求拦截_拦截器.assets/1726366369069.png)
+
+
+
+## 和过滤器对比
+
+> - 拦截器可以调用 IOC 容器中的各种依赖，而过滤器不能 
+> - 过滤器可以拦截所有的请求，包括静态资源（如 HTML、CSS、JS 文件等）和动态资源（如 JSP、Servlet、API 请求等）。拦截器一般只拦截动态请求，比如进入控制器（Controller）的请求，而不会拦截静态资源的请求。
+> - **拦截器可配置不拦截页面**
+> - 过滤器属于Tomcat，拦截器属于Spring
+> - 过滤器拦截时机优于拦截器
