--- a/SpringBoot_Note/+配置文件_配置.md
+++ b/SpringBoot_Note/+配置文件_配置.md
@@ -1,33 +1,33 @@
-# 补充知识
-
 ## 配置文件的优先级
 
-> properties > yml  > yaml
+> - properties > yml  > yaml
+> - 前缀都必须为application
+> - 默认为application.properties
 
 
 
-## 配置方式
+## 手动配置方式
 
 > - java系统属性：VW　options
 >   - 优先级高于配置文件
 
-![1726300631686](SpringBoot_补充知识.assets/1726300631686.png)
+![1726300631686](SpringBoot_%E8%A1%A5%E5%85%85%E7%9F%A5%E8%AF%86.assets/1726300631686.png)
 
 
 
 > - 命令行参数：Program arguments
 
-![1726300998251](SpringBoot_补充知识.assets/1726300998251.png)
+![1726300998251](SpringBoot_%E8%A1%A5%E5%85%85%E7%9F%A5%E8%AF%86.assets/1726300998251.png)
 
 
 
-## 命令行启动及配置
+> - 命令行启动及配置
 
 
 
-![1726301073395](SpringBoot_补充知识.assets/1726301073395.png)
+![1726301073395](SpringBoot_%E8%A1%A5%E5%85%85%E7%9F%A5%E8%AF%86.assets/1726301073395.png)
 
-![1726301079964](SpringBoot_补充知识.assets/1726301079964.png)
+![1726301079964](SpringBoot_%E8%A1%A5%E5%85%85%E7%9F%A5%E8%AF%86.assets/1726301079964.png)
 
 
 
@@ -57,69 +57,36 @@
 
 #### 单文件配置
 
-> - "---"分隔
-> - 起别名
->   - Spring.properties=dev
-> - spring.profiles.active 指定要激活的环境
-
-![1726302196738](SpringBoot_补充知识.assets/1726302196738.png)
-
-
+> - yml可实现多文档模块
+>   - "---"分隔
+>   - 起别名
+>     - Spring.properties=dev
+>   - 激活
+>     - spring.profiles.active 指定要激活的环境
 
 
 
-## Bean管理
+```yml
+server: 
+  port: 8081
 
-### 获取bean
+#激活指定配置
+spring:
+  profiles:
+     active: dev 
 
-> - 默认情况，Spring项目启动时，会把bean创好放在IOC中
->   - 扫描启动类的包内全部内容
-> - 主动获取
->   - 名字
->   - 类型
->   - 
-
-
-
-### bean作用域
-
-
-
-### 第三方bean
+ 
+---
+server: 
+  port: 8082
+spring: 
+ profiles: dev
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+---
+server: 
+  port: 8081
+spring: 
+ profiles: test
+```
 
