--- a/SpringBoot_Note/0、注解汇总.md
+++ b/SpringBoot_Note/0、注解汇总.md
@@ -10,6 +10,8 @@
 > - **@ComponentScan：**
 >   - 自动扫描并注册标注了 @Component、@Service、@Controller 等注解的 Bean。
 
+
+
 ## 二、反转及注入
 
 > ### Bean
@@ -27,14 +29,15 @@
 > **常用属性**
 >
 > - **value**：
-> - 用于指定 Bean 的名称。如果未提供，默认情况下 Bean 的名称为类名的首字母小写形式
 >
->  ```java
->  @Component("myBean")
->  public class MyComponent {
->      // Bean 代码
->  }
->  ```
+> - 用于指定 Bean 的名称。如果未提供，默认情况下 Bean 的名称为类名的**首字母小写形式**
+>
+>   ```
+>   @Component("myBean")
+>   public class MyComponent {
+>     // Bean 代码
+>   }
+>   ```
 >
 > **@Autowired**  
 >
@@ -56,8 +59,8 @@
 > **@RestController**：
 >
 > - 结合了 `@Controller` 和 `@ResponseBody`
->   -  `@Controller`
->   - `@ResponseBody`
+>   -  `@Controller`：控制器
+>   - `@ResponseBody`：封装返回值
 >   
 > - 用于定义 RESTful API 控制器，直接返回 JSON 或 XML 等格式的数据，而不是视图
 >
@@ -128,12 +131,12 @@
 >
 > - 是 MyBatis 框架中的一个注解，用于将 Java 接口与 SQL 映射起来，负责执行数据库的操作
 > - **@Mapper与@Repository**
->   
+>
 >   - 使用 @Mapper 就不需要再使用 @Repository，因为它已经承担了类似的职责，即标识数据访问层。
->   
+>
 >   - @Mapper 专用于 MyBatis Mapper 接口，而 @Repository 是 Spring 提供的用于标识 DAO 层的注解。
->   
->     
+>
+>  
 >
 > **SQL语句注解**
 >
@@ -141,46 +144,52 @@
 >
 >   - @Select("SELECT * FROM users WHERE id = #{id}")
 >   User selectUserById(int id);
->      - 
+>   
+>   
+>   
+> - **@Insert**
 >
->   - **@Insert**
->   - @Insert("INSERT INTO users(name, email) VALUES(#{name}, #{email})")
->     void insertUser(User user);
->    - 
+>    - @Insert("INSERT INTO users(name, email) VALUES(#{name}, #{email})")
+>       void insertUser(User user);
+>
+>       
 >
 > - **@Update**
-> - @Update("UPDATE users SET name = #{name} WHERE id = #{id}")
+>    - @Update("UPDATE users SET name = #{name} WHERE id = #{id}")
 >      void update(User user);
-> - 
->   
+>
+>    
 > - **@Delete**
 >
 >     - @Delete("DELETE FROM users WHERE id = #{id}")
->  void deleteUser(int id);
->     - 
+>       void deleteUser(int id);
+>
+>       
 >
 > - **@Param**
 >
 >   - @Select("SELECT * FROM users WHERE name = #{name}")
-> User selectUserByName(@Param("name") String name);
->   - 
+>     User selectUserByName(@Param("name") String name);
+>
+>     
 >
 > - **@Results 和 @Result**
 >
 >    - @Select("SELECT * FROM users WHERE id = #{id}")
->    @Results({
->     @Result(property = "id", column = "id"),
->     @Result(property = "name", column = "name"),
->     @Result(property = "email", column = "email")
->    })
->     User selectUserById(int id);
->     - 
+>   @Results({
+>    	@Result(property = "id", column = "id"),
+>    	@Result(property = "name", column = "name"),
+>    	@Result(property = "email", column = "email")
+>   })
+>    User selectUserById(int id);
+>    
+>   
+>   
+> - **使用规范**
 >
->   - **使用规范**
+>   - 使用注解的方式可以提高代码的可读性，但 **复杂的 SQL 查询** 可能更适合使用 XML 映射文件。
 >
->     - 使用注解的方式可以提高代码的可读性，但 **复杂的 SQL 查询** 可能更适合使用 XML 映射文件。
->
->  
+> 
 
 
 
