--- a/SpringBoot_Note/4、安全/安全_事物管理.md
+++ b/SpringBoot_Note/4、安全/安全_事物管理.md
@@ -7,7 +7,7 @@
 > - 四大特性
 >   - 原子性：整体不可分割
 >   - 一致性：数据必须处于一致状态
->   - 隔离性：事务和事物之间是彼此隔离的
+>   - 隔离性：事务和事务之间是彼此隔离的
 >   - 持久性：事物处理的结果都是永久的
 
 
@@ -18,7 +18,7 @@
 
 > - 概述
 >   - Spring 提供了 `PlatformTransactionManager` 接口来进行编程式事务管理。
-> - 实现步骤
+> - 实现步骤 
 >   - 开启事务 --- 获取事务管理器
 >     - 在编程式事务管理中，开启事务不需要显式的命令行语句或数据库命令。
 >     - 事务的开启通过调用 `transactionManager.getTransaction()` 来实现，它会隐式地开启一个新的事务
