--- a/SpringBoot_Note/4、安全/安全_请求拦截_拦截器.md
+++ b/SpringBoot_Note/4、安全/安全_请求拦截_拦截器.md
@@ -1,113 +1,33 @@
 ## 概述
 
-> - 拦截器是 **Spring** 框架提供的核心功能之一，允许开发人员提前预定义一些逻辑，在用户的请求、响应前后执行。也可以在用户请求前阻止其执行或者在请求完成之后做一些资源释放。
-> - 
+![1726188374320](安全_请求拦截_过滤器Filter.assets/1726188374320.png)
+
+> - 拦截器是 **Spring** 框架提供的核心功能之一，允许开发人员提前预定义一些逻辑，在用户的请求、响应前后执行。
+> - 也可以在用户请求前阻止其执行或者在请求完成之后做一些资源释放。
+> - 在 Spring Boot 中，**需要将拦截器注册到 Spring 的配置中**
+> - 注册拦截器意味着将你自定义的拦截器添加到 Spring 的上下文中，以便在请求到达控制器之前和之后执行特定的逻辑。
 
 
 
-## 视图参考过滤器
+## 注册拦截器的步骤
+
+> - **创建拦截器**： 你首先需要创建一个实现 `HandlerInterceptor` 接口的类，定义 `preHandle`、`postHandle` 和 `afterCompletion` 方法。
+> - **创建配置类**： 你需要创建一个配置类，实现 `WebMvcConfigurer` 接口。在这个配置类中，你可以注册自定义的拦截器。
+> - **添加拦截器**： 在配置类中重写 `addInterceptors` 方法，将拦截器添加到拦截器注册表中。
 
 
 
 ## 拦截器基本流程
 
-### 创建拦截器类
-
-> - 实现HandlerInterceptor接口
-> - 重写perHandle方法
->   - true放行
-> - 在类上加上@component，交由类管理
-
-
-
-```java
-@Component//交给IOC容器
-@Slf4j
-public class MyInterceptor implements HandlerInterceptor {
-
-//    拦截资源请求方法
-    @Override
-    public boolean preHandle(HttpServletRequest request, HttpServletResponse response, Object handler) throws Exception {
-        log.info("拦截");
-        //放行：通过返回值进行放行操作：true放行，false不放行
-        return true;
-    }
-
-
-
-//    放行后的方法
-    @Override
-    public void postHandle(HttpServletRequest request, HttpServletResponse response, Object handler, ModelAndView modelAndView) throws Exception {
-        HandlerInterceptor.super.postHandle(request, response, handler, modelAndView);
-    }
-
-    @Override
-    public void afterCompletion(HttpServletRequest request, HttpServletResponse response, Object handler, Exception ex) throws Exception {
-        HandlerInterceptor.super.afterCompletion(request, response, handler, ex);
-    }
-}
-```
-
-
-
-### 注册一个配置类
-
-> - 实现WebmvcConfigure接口
-> - 添加@Configuration注解表示当前类是一个配置类
-> - 重写addInterceptors方法
-
-
-
-```java
-@Configuration  //添加了此注解表示当前类是一个配置类
-public class WebConfig implements WebMvcConfigurer {
-
-    //注入入门拦截器
-	//@Autowired
-	//MyInterceptor myInterceptor;
-
-    //注入登录拦截器
-    @Autowired
-    LoginInterceptor loginInterceptor;
-
-    // 配置拦截器
-    @Override
-    public void addInterceptors(InterceptorRegistry registry) {
-
-        //配置拦截资源
-        //registry.addInterceptor(myInterceptor).addPathPatterns("/**");
-
-        //配置拦截资源
-        registry
-                .addInterceptor(loginInterceptor)
-                //配置拦截路径
-                .addPathPatterns("/**")
-                //可设置不拦截路径
-                .excludePathPatterns("/login");
-
-    }
-
-}
-```
-
-
-
-### 配置拦截路径
-
-![1726274221084](安全_请求拦截_拦截器.assets/1726274221084.png)
-
-
-
-### 可配置路径
-
-![1726366369069](安全_请求拦截_拦截器.assets/1726366369069.png)
-
-
-
-## 和过滤器对比
-
-> - 拦截器可以调用 IOC 容器中的各种依赖，而过滤器不能 
-> - 过滤器可以拦截所有的请求，包括静态资源（如 HTML、CSS、JS 文件等）和动态资源（如 JSP、Servlet、API 请求等）。拦截器一般只拦截动态请求，比如进入控制器（Controller）的请求，而不会拦截静态资源的请求。
-> - **拦截器可配置不拦截页面**
-> - 过滤器属于Tomcat，拦截器属于Spring
-> - 过滤器拦截时机优于拦截器
+> - ### 流程逻辑
+>
+>   - **请求到达服务器**：客户端发送请求到服务器。
+>   - **进入拦截器的  preHandle  方法**
+>     - 你可以在这里添加逻辑，比如检查用户身份或权限。
+>     - 如果条件不满足（如未提供令牌），可以发送错误响应并返回 `false`，拦截请求。
+>     - 如果条件满足，返回 `true`，继续处理请求。
+>   - **请求到达控制器**：请求被发送到对应的控制器方法。
+>   - **控制器处理请求**：控制器执行逻辑，处理完后返回响应。
+>   - **进入 postHandle 方法**：请求处理完成后，但在视图渲染之前，可以在这里添加额外的逻辑。
+>   - **视图渲染**：生成响应视图。
+>   - **进入 afterCompletion 方法**：请求完成后执行，可进行清理操作，比如日志记录。
