--- a/SpringBoot_Note/8、杂七杂八/全局异常处理.md
+++ b/SpringBoot_Note/8、杂七杂八/全局异常处理.md
@@ -4,13 +4,13 @@
 > - 自定义父类接收所有业务异常
 > - Exception接收所有系统异常
 
-![1726381290550](SpringBoot_全局异常处理.assets/1726381290550.png)
+![1726381290550](全局异常处理.assets/1726381290550.png)
 
 
 
 ## SpringBoot 中的异常处理
 
-![](SpringBoot_全局异常处理.assets/1726378793681.png)
+![](全局异常处理.assets/1726378793681.png)
 
 
 
@@ -24,7 +24,7 @@
 
 ### 方案二：全局异常处理
 
-![1726382068085](SpringBoot_全局异常处理.assets/1726382068085.png)
+![1726382068085](全局异常处理.assets/1726382068085.png)
 
 
 
