--- a/SpringBoot_Note/4、安全/安全_密码_加盐加密.md
+++ b/SpringBoot_Note/4、安全/安全_密码_加盐加密.md
@@ -1,9 +1,3 @@
-
-
-
-
-
-
 ##　加盐过程
 
 > - 生成盐值
@@ -15,18 +9,18 @@
 >   - 使用常见的哈希算法（如 SHA-256、SHA-512）对组合后的密码进行加密。
 >   - 哈希函数会生成一个 **固定长度 ** 的加密结果，无论输入多长
 > - 存储加密结果和盐值
->   - 通常盐值会与加密后的密码一起保存，这样在验证密码时，可以使用相同的盐值重新进行加密验证。
+>   - 通常盐值会与加密后的密码一起保存，这样在验证密码时，可以使用相同的盐值重新进行解密验证。
 
 
 
 ### 盐生成-SecureRandom
 
 > - 概述
-> - `SecureRandom` 是 Java 中用于生成强随机数的类，它被设计为加密级别的随机数生成器，适用于对安全性要求较高的场景，比如生成密码、加盐值、密钥等。
+> - `SecureRandom` 是 Java 中用于生成  **强随机数**  的类，它被设计为加密级别的随机数生成器，适用于对安全性要求较高的场景，比如生成密码、加盐值、密钥等。
 
 > - 创建实例
 >
->   ```
+>   ```java
 >   // 方式 1：默认构造函数
 >   SecureRandom random = new SecureRandom();
 >   
@@ -38,7 +32,7 @@
 
 > - 生成随机数
 >
->   ```
+>   ```java
 >   int randomInt = random.nextInt();  // 生成任意范围的随机整数
 >   int randomBoundInt = random.nextInt(100);  // 生成 [0, 100) 范围的随机整数
 >   ```
@@ -47,7 +41,7 @@
 
 > - 生成随机字节数组
 >
->   ```
+>   ```java
 >   byte[] salt = new byte[16];  // 创建一个16字节的数组
 >   random.nextBytes(salt);  // 填充随机字节
 >   ```
@@ -58,20 +52,28 @@
 
 > - **使用Base64** 
 >   -  **目的**
->   - **字节数组（byte[]）**：在生成盐值时，`SecureRandom.nextBytes()` 返回的是一个字节数组，而字节数组在存储或输出时通常不太直观。
+>   
+>   - **字节数组（byte[]）**：在生成盐值时，`**SecureRandom.nextBytes()` 返回的是一个字节数组**，而字节数组在存储或输出时通常不太直观。
+>   
 >   - **Base64 编码**：Base64 是一种常见的二进制到文本的编码方式，可以将二进制数据（如字节数组）转换为可打印的字符串，这样可以更方便地在文本文件、数据库或网络中传输。
-> - 为什么不用Sting的字符构造函数直接转，而选用Base64
+>   
+>     
+> - **为什么不用Sting的字符构造函数直接转，而选用Base64**
+>   
 >   - `SecureRandom` 
->     - 生成的实际上是**二进制数据**，生成的每个字节都是0到255之间的一个值，而不是特定字符集的字符。
+>     - **生成的实际上是二进制数据，生成的每个字节都是0到255之间的一个值，而不是特定字符集的字符。**
 >     - 它的主要目的是提供高质量的随机性，不涉及字符的表示或编码。生成的字节可以直接用于加密算法或作为盐值，但这些字节并不直接对应于任何字符集。
->     - 盐值的字节可能无法被 UTF-8（或任何其他字符集）直接解释为有效的字符序列。
+>     - **盐值的字节可能无法被 UTF-8（或任何其他字符集）直接解释为有效的字符序列。**
 >   - String与Base64
->   - 加密盐值、哈希值等数据本质上是二进制数据，而 `String` 是为文本数据设计的。直接将二进制数据解释为文本字符是一个错误的使用场景。
+>     - 加密盐值、哈希值等数据本质上是二进制数据，而 `String` 是为文本数据设计的。直接将二进制数据解释为文本字符是一个错误的使用场景。
 >     - String
->     - `String(byte[] bytes)` 构造函数会假定字节数组中的数据是以默认字符集（例如 UTF-8 或 ISO-8859-1）编码的字符。它将这些字节解析为字符并生成字符串。如果字节数组中的数据并不是有效的字符编码，解析出的结果可能是乱码，甚至导致数据丢失。
+>       - `String(byte[] bytes)` 构造函数会假定字节数组中的数据是以默认字符集（例如 UTF-8 或 ISO-8859-1）编码的字符。
+>       - 它将这些字节解析为字符并生成字符串。
+>       - 如果字节数组中的数据并不是有效的字符编码，解析出的结果可能是乱码，甚至导致数据丢失。
 >     - Base64 
->     - **Base64** 编码是将二进制数据（如盐值）转换为可打印字符的标准方法，它不依赖于字符集。
->     - Base64 可以将任意二进制数据安全地转换为只包含字母（大写和小写）、数字以及两个特殊字符 `+` 和 `/`的字符，这些字符在各种环境下都是可读和可传输的。
+>       - **Base64** 编码是将二进制数据（如盐值）转换为可打印字符的标准方法，它不依赖于字符集。
+>       - Base64 可以将任意二进制数据安全地转换为只包含字母（大写和小写）、数字以及两个特殊字符 `+` 和 `/`的字符
+>       - 这些字符在各种环境下都是可读和可传输的。
 
 
 
