--- a/SpringBoot_Note/6、SpringBoot机制/动态代理.md
+++ b/SpringBoot_Note/6、SpringBoot机制/动态代理.md
@@ -2,12 +2,24 @@
 
 ### 什么是动态代理
 
-> - 在运行时创建一个代理类，而不是在编译时就决定好。这使得你可以在不修改目标类的情况下，给它添加额外的功能。
-> - 代理 和 被代理对象 要做的事情是一致的
+> - 在运行时创建一个代理类，而不是在编译时就决定好。
+> - 这使得你可以在不修改目标类的情况下，给它添加额外的功能。
 
 
 
-## 处理器 -- InvocationHandler
+## 逻辑梳理
+
+> - 首先，创建一个目标对象实例，用来反射获取对象的元数据
+> - 代理对象将 目标对象构造器 及 目标对象接口数组   传递给处理器
+> - `Proxy` 类负责封装代理逻辑，而具体的反射调用隐藏在底层，它并不 拥有 被代理对象的所有信息。**它仅在运行时通过反射访问和操作这些信息**
+> - 在调用时通过 指定的`InvocationHandler` 处理
+> - `Proxy` 对象和处理器之间的联系确实是通过   **底层的封装实现的，而不是通过显式传参来调用构造器的**
+> - InvocationHandler 处理器会在proxy对象执行目标方法时自动激活 invoke( ) 方法
+> - 在 invoke( ) 方法中可以自定义处理逻辑
+
+
+
+## 处理器接口 -- InvocationHandler
 
 > - Java 反射机制中的一个接口
 > - 是动态代理的核心，它负责拦截所有方法调用
@@ -34,7 +46,7 @@
 
 
 
-## 代理实例 -- Proxy.newProxyInstance
+## 代理对象 -- Proxy.newProxyInstance
 
 #### 作用
 
@@ -46,13 +58,13 @@
 
 > - **ClassLoader loader**
 >   - 指定代理对象的类加载器
->   - 通常可以使用目标对象的类加载器（`realObject.getClass().getClassLoader()`）作为参数
+>   - 通常可以使用目标对象的类加载器 **realObject.getClass( ).getClassLoader( )** 作为参数
 >   - 这个类加载器 负责加载 被代理类的字节码
 
 > - **Class<?>[] interfaces**
 >   - 指定要实现的接口数组
 >   - 代理对象将会实现这些接口。
->   - 你需要为代理对象提供接口，**以便在调用代理方法时知道哪些方法可以被调用**
+>   - **以便在调用代理方法时知道哪些方法可以被调用**
 
 > - **InvocationHandler h**
 >   - 传入实现了 `InvocationHandler` 接口的对象（自定义处理器）
@@ -64,7 +76,7 @@
 
 ### 创建接口和实现类  --  被代理对象
 
-> - 动态代理的目标是实现某个接口
+> - **动态代理的目标是实现某个接口**
 > - 首先，你需要定义一个接口（如 `UserService`）和其实现类（如 `UserServiceImpl`）。
 > - 这为代理提供了方法签名。
 
@@ -96,17 +108,22 @@ public class UserServiceImpl implements UserService {
 
 ```java
 public class MyInvocationHandler implements InvocationHandler {
+    
+    //用范型Object来接收被代理对象实例
     private Object target;
 
     public MyInvocationHandler(Object target) {
         this.target = target;
     }
 
+    //核心 -- 增强的位置
     @Override
-    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-        System.out.println("方法调用前: " + method.getName());
-        Object result = method.invoke(target, args); // 调用目标对象的方法
-        System.out.println("方法调用后: " + method.getName());
+    public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {//三个参数：代理对象，目标方法，目标方法的参数
+        
+        //可自定义逻辑
+        Object result = method.invoke(target, args); // 调用目标对象的方法 -- 调用target对象的method方法，参数为args
+       //可自定义逻辑
+        
         return result;
     }
 }
@@ -116,7 +133,7 @@ public class MyInvocationHandler implements InvocationHandler {
 
 ### 使用Proxy类创建代理对象
 
-> - 通过 `Proxy` 类的 `newProxyInstance` 方法来创建代理对象，需要三个参数
+> - 通过 `Proxy` 类的  **newProxyInstance**  方法来创建代理对象，需要三个参数
 >   - **类加载器**：用于加载代理类的类加载器。
 >   - **接口数组**：代理对象所实现的接口列表。
 >   - **InvocationHandler**：负责处理方法调用的处理器
@@ -124,13 +141,15 @@ public class MyInvocationHandler implements InvocationHandler {
 ```java
 public class ProxyDemo {
     public static void main(String[] args) {
+        
+        //被代理对象实例
         UserService userService = new UserServiceImpl();
         
         // 创建动态代理对象
         UserService proxyInstance = (UserService) Proxy.newProxyInstance(
-                userService.getClass().getClassLoader(),
-                new Class[]{UserService.class},
-                new MyInvocationHandler(userService)
+                userService.getClass().getClassLoader(),//类加载器
+                new Class[]{UserService.class},//接口数组
+                new MyInvocationHandler(userService)//处理器
         );
 
         // 调用代理对象的方法
@@ -139,16 +158,15 @@ public class ProxyDemo {
 }
 ```
 
+
+
 > - 在调用 `proxyInstance.doSomething()` 时，并不是直接调用 `MyClass` 的 `doSomething()` 方法，而是调用了 `InvocationHandler` 的 `invoke` 方法。
 > - 在 `invoke` 方法中，你可以在方法调用前后添加任意逻辑（如日志、权限检查等），这就是它的强大之处。
 > - 可以利用 `InvocationHandler` 来灵活地扩展类的行为，而不需要修改原有类的代码。
 
 
 
-### 方法调用
 
-> - 当你通过代理对象调用方法
-> - 实际执行的是 `InvocationHandler` 的 `invoke` 方法
 
 
 
